--- a/webcam-control-stream-client/src/pages/RoboChatPage/RoboChatPage.css
+++ b/webcam-control-stream-client/src/pages/RoboChatPage/RoboChatPage.css
@@ -3,8 +3,8 @@
     height: 100vh;
     display: grid;
 
-    grid-template-columns: auto 20%;
-    grid-template-rows: auto 10%;
+    grid-template-columns: auto 30%;
+    grid-template-rows: auto 72px;
 }
 
 .command-input {
